--- a/src/main/resources/templates/user/combo.html
+++ b/src/main/resources/templates/user/combo.html
@@ -375,11 +375,10 @@
                     <div class="col-sm-6 col-lg-5">
                         <nav class="navbar">
                             <a class="nav-brand" href="/"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
-                        </nav>
                     </div>
                     <div class="col-sm-6 col-lg-2">
                         <div class="single_footer_part">
-                            <h4>Our Page</h4>
+                            <h4>Website</h4>
                             <ul class="list-unstyled">
                                 <li><a href="/">Trang chủ</a></li>
                                 <li><a href="/category">Sản phẩm</a></li>
@@ -391,7 +390,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-2">
                         <div class="single_footer_part">
-                            <h4>Our Social</h4>
+                            <h4>Về chúng tôi</h4>
                             <ul class="list-unstyled">
                                 <li><a target="_blank" href="https://www.facebook.com/profile.php?id=61560555539153">Facebook</a></li>
                                 <li><a target="_blank" href="https://www.instagram.com/deprop_studio/">Instagram</a></li>
@@ -400,7 +399,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-3">
                         <div class="single_footer_part">
-                            <h4>Our Contact</h4>
+                            <h4>Thông tin liên hệ</h4>
                             <ul class="list-unstyled">
                                 <li><a href="mailto:deprop.contact@gmail.com">deprop.contact@gmail.com</a></li>
                                 <li><a href="tel:0901131465">0901131465</a></li>
