--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -94,54 +94,14 @@
         <div class="banner_slider owl-carousel owl-theme">
             <div class="single_banner_slider">
                 <div class="banner_img">
-                    <img src="/images/banner/bg1.jpg" alt="">
-                    <div class="banner_text">
-                        <div class="banner_text_iner">
-                            <h1>Giới thiệu</h1>
-                            <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
-                                suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="/contact" class="custom_btn btn_white">Về chúng tôi</a>
-                        </div>
-                    </div>
+                    <img src="/images/banner/banner-1.png" alt="">
+                    <a href="/category" class="banner_btn btn_white">Khám phá ngay</a>
                 </div>
             </div>
             <div class="single_banner_slider">
                 <div class="banner_img">
-                    <img src="/images/banner/bg1.jpg" alt="">
-                    <div class="banner_text">
-                        <div class="banner_text_iner">
-                            <h1>Giới thiệu</h1>
-                            <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
-                                suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="/contact" class="custom_btn btn_white">Về chúng tôi</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single_banner_slider">
-                <div class="banner_img">
-                    <img src="/images/banner/bg1.jpg" alt="">
-                    <div class="banner_text">
-                        <div class="banner_text_iner">
-                            <h1>Giới thiệu</h1>
-                            <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
-                                suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="/contact" class="custom_btn btn_white">Về chúng tôi</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="single_banner_slider">
-                <div class="banner_img">
-                    <img src="/images/banner/bg1.jpg" alt="">
-                    <div class="banner_text">
-                        <div class="banner_text_iner">
-                            <h1>Giới thiệu</h1>
-                            <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
-                                suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="/contact" class="custom_btn btn_white">Về chúng tôi</a>
-                        </div>
-                    </div>
+                    <img src="/images/banner/banner-2.png" alt="">
+                    <a href="/combo" class="banner_btn btn_white">Khám phá ngay</a>
                 </div>
             </div>
         </div>
@@ -303,7 +263,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-2">
                         <div class="single_footer_part">
-                            <h4>Our Page</h4>
+                            <h4>Website</h4>
                             <ul class="list-unstyled">
                                 <li><a href="/">Trang chủ</a></li>
                                 <li><a href="/category">Sản phẩm</a></li>
@@ -315,7 +275,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-2">
                         <div class="single_footer_part">
-                            <h4>Our Social</h4>
+                            <h4>Về chúng tôi</h4>
                             <ul class="list-unstyled">
                                 <li><a target="_blank" href="https://www.facebook.com/profile.php?id=61560555539153">Facebook</a></li>
                                 <li><a target="_blank" href="https://www.instagram.com/deprop_studio/">Instagram</a></li>
@@ -324,7 +284,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-3">
                         <div class="single_footer_part">
-                            <h4>Our Contact</h4>
+                            <h4>Thông tin liên hệ</h4>
                             <ul class="list-unstyled">
                                 <li><a href="mailto:deprop.contact@gmail.com">deprop.contact@gmail.com</a></li>
                                 <li><a href="tel:0901131465">0901131465</a></li>
