--- a/src/main/resources/templates/user/contact.html
+++ b/src/main/resources/templates/user/contact.html
@@ -147,23 +147,64 @@
       </div>
     </section>
 
+    <!--::footer_part start::-->
     <footer class="footer_part">
-      <div class="copyright_part">
-        <div class="container">
-          <div
-            class="copyright_text d-flex align-items-center justify-content-between"
-          >
-            <span> <a>DeArt Corp</a>. All rights reserved. </span>
-            <span
-              >&copy;
-              <script>
-                document.write(new Date().getFullYear());
-              </script></span
-            >
+          <div class="footlink_part">
+              <div class="container">
+                  <div class="row justify-content-around">
+                      <div class="col-sm-6 col-lg-5">
+                          <nav class="navbar">
+                              <a class="nav-brand" href="/"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
+                      </div>
+                      <div class="col-sm-6 col-lg-2">
+                          <div class="single_footer_part">
+                              <h4>Website</h4>
+                              <ul class="list-unstyled">
+                                  <li><a href="/">Trang chủ</a></li>
+                                  <li><a href="/category">Sản phẩm</a></li>
+                                  <li><a href="/category">Combo</a></li>
+                                  <li><a href="/contact">Liên hệ</a></li>
+                                  
+                              </ul>
+                          </div>
+                      </div>
+                      <div class="col-sm-6 col-lg-2">
+                          <div class="single_footer_part">
+                              <h4>Về chúng tôi</h4>
+                              <ul class="list-unstyled">
+                                  <li><a target="_blank" href="https://www.facebook.com/profile.php?id=61560555539153">Facebook</a></li>
+                                  <li><a target="_blank" href="https://www.instagram.com/deprop_studio/">Instagram</a></li>
+                              </ul>
+                          </div>
+                      </div>
+                      <div class="col-sm-6 col-lg-3">
+                          <div class="single_footer_part">
+                              <h4>Thông tin liên hệ</h4>
+                              <ul class="list-unstyled">
+                                  <li><a href="mailto:deprop.contact@gmail.com">deprop.contact@gmail.com</a></li>
+                                  <li><a href="tel:0901131465">0901131465</a></li>
+                                  <li><a>District 9, Ho Chi Minh city</a></li>
+                              </ul>
+                          </div>
+                      </div>
+                  </div>
+                  
+              </div>
           </div>
-        </div>
-      </div>
+          
+          <div class="copyright_part">
+              <div class="container">
+                  <div class="copyright_text d-flex align-items-center justify-content-between">
+                      <span>
+                        <a>DeArt Corp</a>. All rights reserved.
+                      </span>
+                      <span>&copy;<script>document.write(new Date().getFullYear());</script></span>
+                  </div>
+              </div>
+          </div>
     </footer>
+    <!--::footer_part end::-->
+    
 
     <div class="quick_cart offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="true" tabindex="-1" id="quickCart" aria-labelledby="quickCartLabel">
         <div class="offcanvas-header">
