--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -1,12 +1,9 @@
 /*Color Variables*/
 /**************** extend css start ****************/
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap");
 /**************** extend css start ****************/
 /**************** common css start ****************/
-@font-face {
-  font-family: Caveat;
-  src: url(../fonts/Fz-Caveat-Regular.ttf);
-}
 body {
   font-family: "Be Vietnam Pro", sans-serif;
   padding: 0;
@@ -858,12 +855,15 @@ ul {
   text-align: left !important;
 }
 .product_list .section_tittle h2 {
+  font-family: "Unbounded", sans-serif;
   font-size: 35px;
+  text-transform: uppercase;
   color: #fff;
 }
-.product_list .section_tittle h2 span {
-  font-family: Caveat;
-  font-size: 60px;
+@media (max-width: 576px) {
+  .product_list .section_tittle h2 {
+    font-size: 25px;
+  }
 }
 .product_list .product_list_slider {
   padding-bottom: 70px;
@@ -927,25 +927,28 @@ ul {
   text-align: center;
 }
 .our_offer .offer_text h2 {
-  line-height: 60px;
+  font-family: "Unbounded", sans-serif;
+  font-weight: 350;
+  line-height: 70px;
   color: #fff;
   font-size: 40px;
   margin-bottom: 50px;
 }
-.our_offer .offer_text h2 span {
-  font-family: Caveat, cursive;
-  font-size: 60px;
-  margin-right: 10px;
-}
-@media (max-width: 576px) {
-  .our_offer .offer_text h2 span {
-    font-size: 50px;
-  }
-}
 @media (max-width: 576px) {
   .our_offer .offer_text h2 {
-    font-size: 28px;
+    font-size: 20px;
+    line-height: 40px;
+    margin-bottom: 30px;
   }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .our_offer .offer_text h2 {
+    font-size: 30px;
+    line-height: 40px;
+  }
+}
+.our_offer .offer_text b {
+  color: #fff;
 }
 
 /* Feature Product Area css
@@ -1087,7 +1090,9 @@ ul {
 .cat_product_area {
   background-color: #fff;
 }
-
+.cat_product_area .latest_product_inner {
+  padding-top: 30px;
+}
 .cat_product_area .latest_product_inner .single-product {
   margin-bottom: 50px;
 }
@@ -3564,23 +3569,32 @@ html, body {
   }
 }
 .feature_part .section_tittle h4 {
+  font-family: "Unbounded", sans-serif;
+  font-weight: 350;
   color: #fff;
   margin-bottom: 30px;
 }
 @media (max-width: 576px) {
   .feature_part .section_tittle h4 {
     font-size: 15px;
+    margin-bottom: 20px;
   }
 }
 .feature_part .section_tittle h2 {
-  font-family: "Caveat", cursive;
+  font-family: "Unbounded", sans-serif;
+  text-transform: uppercase;
   color: #fff;
   width: 100%;
-  font-size: 70px;
+  font-size: 60px;
 }
 @media (max-width: 576px) {
   .feature_part .section_tittle h2 {
-    font-size: 60px;
+    font-size: 30px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .feature_part .section_tittle h2 {
+    font-size: 35px;
   }
 }
 .feature_part .owl-theme .owl-dots {
@@ -3760,7 +3774,7 @@ html, body {
   }
 }
 .related_product .section_tittle h2 span {
-  font-family: "Caveat", cursive;
+  font-family: "Unbounded", sans-serif;
   font-size: 50px;
 }
 .related_product .product_list_slider {
