--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -244,7 +244,7 @@
     <section class="our_offer">
         <div class="container">
             <div class="offer_text">
-                <h2>Cùng chọn sản phẩm decor<br> <strong>phù hợp</strong> với bạn nhé.</h2>
+                <h2>Cùng <strong>chọn sản phẩm</strong> decor<br> phù hợp với bạn nhé.</h2>
             </div>
             <a href="/category" class="custom_btn btn_white">Đến cửa hàng</a>
 
