--- a/sass/_single_product.scss
+++ b/sass/_single_product.scss
@@ -4,6 +4,7 @@
 .product_image_area {
   background-color: $white;
   padding-top: 10px;
+  padding-bottom: 40px;
 }
 
 .s_product_img {
@@ -12,6 +13,10 @@
 
 .s_product_text {
   @media #{$small_mobile} {
+    margin-top: 30px;
+  }
+
+  @media #{$large_mobile} {
     margin-top: 30px;
   }
 
@@ -77,7 +82,7 @@
     }
   }
 
-  p {
+  .product_description {
     padding-top: 20px;
     border-top: 1px dotted #d5d5d5;
     margin: 20px 0;
@@ -138,41 +143,56 @@
       }
     }
   }
+}
 
-  .product_accordion {
-    margin-top: 30px;
-    gap: 30px;
-    h5 {
-      margin: 0;
-    }
+.product_accordion {
+  margin-top: 30px;
+  gap: 30px;
+  h5 {
+    margin: 0;
+  }
 
-    i {
-      color: #000;
-    }
+  i {
+    color: #000;
+  }
 
-    .offcanvas {
-      width: 500px;
+  p {
+    font-size: 14px;
+    strong {
+      font-weight: bold;
     }
+    a {
+      color: $black;
+      text-decoration: underline;
+    }
+  }
 
-    .offcanvas-body {
-      background-color: white;
-      color: #000;
-      .accordion-button {
-        padding: 10px 20px;
-        font-size: 14px;
-        line-height: 30px;
-      }
-      .accordion-button:focus {
-        box-shadow: none;
-      }
-      .accordion-button:not(.collapsed) {
-        background-color: $black-color;
-        color: $white_color;
-        box-shadow: none;
-      }
-      .accordion-button:not(.collapsed)::after {
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-      }
-    }
+  .offcanvas {
+    width: 500px;
+  }
+
+  .offcanvas-body {
+    background-color: white;
+    color: #000;
+  }
+  
+  .accordion-button {
+    padding: 10px 20px;
+    font-size: 14px;
+    line-height: 30px;
+  }
+  .accordion-button:focus {
+    box-shadow: none;
+  }
+  .accordion-button:not(.collapsed) {
+    background-color: $black-color;
+    color: $white_color;
+    box-shadow: none;
+  }
+  .accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  }
+  .accordion-body {
+    background-color: #f5f5f5;
   }
 }
