--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -1,9 +1,6 @@
 /**************** common css start ****************/
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@font-face {
-    font-family: Caveat;
-    src: url(/fonts/Fz-Caveat-Regular.ttf);
-}
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap');
 
 body {
     font-family: $font_stack_1;
@@ -312,24 +309,28 @@ ul {
     box-shadow: none;
 }
 
-.pageination {
+.pagination {
     .page-link {
         border: 0px solid transparent;
         font-weight: 500;
         font-size: 18px;
         color: #979797;
         padding: 10px 8px;
+        cursor: pointer;
+        user-select: none;
         &:hover{
             background-color: transparent;
             color: #000;
         }
     }
-    .page-link.active {
+    .page-item.active .page-link {
+        background-color: transparent;
         color: #000;
     }
 
     i{
-        font-size: 12px;
+        font-size: 14px;
+        font-weight: 900;
     }
 }
 
